# ark_franka

./: README.md  pyproject.toml  setup.py
ark_franka/: franka_panda.py
ark_franka.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
franka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
franka_panda/: franka_driver.py  franka_isaacsim_driver.py  franka_newton_driver.py  franka_panda.py  franka_pybullet_driver  franka_pybullet_driver.py  panda.yaml  panda_with_gripper.urdf
franka_panda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
franka_panda/franka_emika_panda/: panda.xml
scripts/: keyboard_ee_controller.py  launch_newton_sim.py  run_pick_place_demo.py
scripts/utils/: debug_tools.py
tests/: franka_controller_interface.ipynb  franka_panda_controller_instance.py  franka_panda_minimal_controller.py  sim_node.py
tests/config/: global_config.yaml  global_config_newton.yaml
tests/config/robots/: franka.yaml  franka_newton.yaml
